--- a/index.html
+++ b/index.html
@@ -1,34 +1,123 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zamwel-LawBooks-Discount</title>
-</head>
-<body>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#1a202c" />
+	<link rel="shortcut icon" href="./assets/img/favicon.ico" />
+	<link rel="anjanibooks-icon" sizes="76x76" href="./assets/img/anjanibooks-icon.png" />
+	<link rel="stylesheet" href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" />
+	<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
+	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
+	<title>Sell Books Online | AnjaniBooks</title>
+	<meta name="description" content="Register & Grow your business today with best online selling platform for Books. Sell Books Online and reach out to millions of customers with Anjanibooks.">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/sharadcodes/abooks-about/master/assets/img/vendor-512.png?token=AKNQI6M66LTY6WWK3REHZIK7SFSXA" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/sharadcodes/abooks-about/master/assets/img/vendor-512.png?token=AKNQI6M66LTY6WWK3REHZIK7SFSXA" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+	<meta name="google-site-verification" content="h7saT_-ek7Efiz-6NLYG98DsAQm7HegjCNc56U_TzrM" />
 
+	<style>
+		* {
+			scroll-behavior: smooth;
+			font-family: "Quicksand", sans-serif;
+			user-select: none;
+			-webkit-user-drag: none;
+		}
 
-<center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyFdZfhAj42C6rP93phQpVY6d_9x7gIbdkTEatznIRlwyaYQ/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
+		@media screen and (max-width: 1024px) {
+			#books {
+				display: flex;
+				flex-direction: column;
+			}
 
-<style>
-#footer
-	{
-     background-color: black;
-     color: #efe5d0;
-     text-align: center;
-	}
-</style>
-													
+			#logo{
+				height: 150px !important;
+			}
 
-<div id="footer">		
-<a href="https://kownblog.github.io/LICENSE.text" style="margin-right: 5px;color: white;">MIT License</a><a style="color: white;margin-right: 5px;">|</a><a href="https://github.com/kownblog" style="margin-right: 5px;color: white;">About us</a>
-<br>
-Kaushik Gupta production 
-<br>
-<a href="https://kownblog.github.io/" style="margin-right:5px;color:white"> k_ownblog</a>&copy 2019
+			#books img {
+				max-width: 100% !important;
+			}
+		}
+	</style>
 	
-</div>
+</head>
 
-
+<body class="text-gray-800 antialiased">
+	<nav class="p-4 flex justify-center bg-gray-900 pt-5 pb-5">
+		<a href="/">
+			<img
+					src="./assets/img/ab_vendor_small.png"
+					alt=""
+					style="height: 160px;"
+					id="logo"
+			/>
+		</a>
+	</nav>
+	
+<!-----------------------------Middle----------------------------------------------->
+		<section class="relative p-5 pt-10 pb-20">
+			<div class="container mx-auto">
+				<h2 class="text-2xl text-center font-bold mb-">
+					Fill up the form and Let's Build a Future Together.
+				</h2>
+			<center>
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJOOmMtwnvbuRRIQsNG4VLgbGalGH4j4Tu7xhfTuS2JXi2Pg/viewform?embedded=true" width="640" height="725" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+			</center>
+		          </div>
+				</div>
+		</section>
+		
+<!----------------------footer---------------------------------------------------->
+	<footer class="relative bg-gray-300 pt-10 pb-6">
+	<div class="mt-6 flex items-center justify-center">
+	<a class="bg-white text-blue-400 flex shadow-lg font-normal h-12 w-12 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button" href="https://twitter.com/anjanibooks">
+	<i class="fab fa-twitter"></i></a><a class="bg-white text-blue-600 flex shadow-lg font-normal h-12 w-12 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2"type="button" href="https://www.facebook.com/anjanibooks">
+	<i class="fab fa-facebook-square"></i></a><a class="bg-white text-pink-400 shadow-lg font-normal h-12 w-12 flex items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2"type="button" href="https://www.instagram.com/anjanibooks">
+	<i class="fab fa-instagram"></i></a><a class="bg-white text-blue-600 shadow-lg font-normal h-12 w-12 flex items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2"type="button" href="https://www.linkedin.com/company/anjanibooks">
+	<i class="fab fa-linkedin"></i></a><a class="bg-white text-pink-400 shadow-lg font-normal h-12 w-12 flex items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2"type="button" href="https://www.youtube.com/channel/UCNhSqvAAVxJvr4_Yqbopuug">
+	<i class="fab fa-youtube"></i></a>
+					</div>
+				</div>
+			</div>
+			<hr class="my-6 border-gray-400" />
+			<div class="flex flex-wrap items-center md:justify-between justify-center">
+				<div class="w-full md:w-4/12 px-4 mx-auto text-center">
+				<div class="text-sm text-gray-600 font-semibold py-1">	
+						<a href="https://www.anjanibooks.com" class="text-gray-600" target="_blank">
+							<span class="text-gray-900 ml-2">
+								AnjaniBooks
+							</span>
+						</a>
+						<span class="ml-2 mr-2">|</span>
+						<a href="https://anjanibooks.com/about-us/" class="text-gray-600" target="_blank">
+							<span class="text-gray-900">
+								About Us
+							</span>
+						</a>
+						<br/>
+						<br/>
+						<div class="text-sm text-gray-600 font-semibold py-1">
+						Copyright © 2019 - 2022
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
+<script>
+	function toggleNavbar(collapseID) {
+			document.getElementById(collapseID).classList.toggle("hidden");
+			document.getElementById(collapseID).classList.toggle("block");
+		}
+</script>
+
 </html>
