--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="theme-color" content="#1a202c" />
 	<link rel="shortcut icon" href="./assets/img/favicon.ico" />
 	<link rel="anjanibooks-icon" sizes="76x76" href="./assets/img/anjanibooks-icon.png" />
-	<link rel="stylesheet" href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" />
+	<link rel="stylesheet" href="./assets/img/css/all.min.css" />
 	<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
