--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<br/>
 						<br/>
 						<div class="text-sm text-gray-600 font-semibold py-1">
-						Copyright © 2019 - 2022
+						Copyright © AnjaniBooks 2019-2021 | All rights reserved | Distribution of the information is strictly prohibited
 					</div>
 				</div>
 			</div>
