--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 				<h2 class="text-2xl text-center font-bold mb-">
 					Fill up the form and Let's Build a Future Together.
 				</h2>
-		
+		<center>
 				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJOOmMtwnvbuRRIQsNG4VLgbGalGH4j4Tu7xhfTuS2JXi2Pg/viewform?embedded=true" width="540" height="725" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-			
+				</center>
 		          </div>
 				</div>
 		</section>
@@ -106,7 +106,7 @@
 						<br/>
 						<br/>
 						<div class="text-sm text-gray-600 font-semibold py-1">
-						Copyright © AnjaniBooks 2019-2021 | All rights reserved | Distribution of the information is strictly prohibited
+						Copyright © AnjaniBooks 2019-2022 | All rights reserved | Distribution of the information is strictly prohibited
 					</div>
 				</div>
 			</div>
