--- a/index.html
+++ b/index.html
@@ -64,14 +64,11 @@
 	</nav>
 	
 <!-----------------------------Middle----------------------------------------------->
-		<section class="relative p-5 pt-10 pb-20">
+<section class="relative p-10 pt-50 pb-10">
 			<div class="container mx-auto">
 				<h2 class="text-2xl text-center font-bold mb-">
-					Fill up the form and Let's Build a Future Together.
+					<a href="https://forms.gle/VHDyhR4wdrHDdvsz6"style="color: blue;">Fill up the form and Let's Build a Future Together Click Here!</a>
 				</h2>
-		<center>
-				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJOOmMtwnvbuRRIQsNG4VLgbGalGH4j4Tu7xhfTuS2JXi2Pg/viewform?embedded=true" width="540" height="725" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-				</center>
 		          </div>
 				</div>
 		</section>
