--- a/index.html
+++ b/index.html
@@ -64,14 +64,161 @@
 	</nav>
 	
 <!-----------------------------Middle----------------------------------------------->
-<section class="relative p-10 pt-50 pb-10">
-			<div class="container mx-auto">
-				<h2 class="text-2xl text-center font-bold mb-">
-					<a href="https://forms.gle/VHDyhR4wdrHDdvsz6"style="color: blue;">Fill up the form and Let's Build a Future Together Click Here!</a>
-				</h2>
-		          </div>
-				</div>
-		</section>
+<div class="ab-vendor-home">
+    <div class="ab-vendor-hero">
+        <h1>Sell Your Books on AnjaniBooks</h1>
+        <p>Join India's growing community of book lovers. Whether you sell new or pre-loved books, we help you reach readers across the country.</p>
+        <a href="YOUR_GOOGLE_FORM_LINK_HERE" class="ab-cta-button">Register as a Vendor</a>
+    </div>
+
+    <div class="ab-features-grid">
+        <div class="ab-feature-card">
+            <div class="ab-icon">💰</div>
+            <h3>Zero Commission</h3>
+            <p>We don't charge a fixed percentage. Keep more of your earnings with our transparent pricing model.</p>
+        </div>
+        <div class="ab-feature-card">
+            <div class="ab-icon">🚚</div>
+            <h3>Hassle-Free Shipping</h3>
+            <p>Our partnership with <strong>Delhivery</strong> means we pick up from your doorstep. No courier stress.</p>
+        </div>
+        <div class="ab-feature-card">
+            <div class="ab-icon">📚</div>
+            <h3>Expert Cataloging</h3>
+            <p>Our team helps you list your books professionally to ensure high visibility and sales.</p>
+        </div>
+    </div>
+
+    <div class="ab-process-section">
+        <h2>How it Works</h2>
+        <div class="ab-steps">
+            <div class="ab-step"><strong>1. Register</strong> - Fill out our simple vendor form.</div>
+            <div class="ab-step"><strong>2. Connect</strong> - Our team calls you to finalize your book pricing.</div>
+            <div class="ab-step"><strong>3. Sell</strong> - We list your books; you get orders and ship via our partner.</div>
+        </div>
+    </div>
+
+    <div class="ab-final-cta">
+        <p>Ready to grow your book business?</p>
+        <a href="YOUR_GOOGLE_FORM_LINK_HERE" class="ab-link-text">Click here to fill the Vendor Application Form →</a>
+    </div>
+</div>
+
+<style>
+    .ab-vendor-home {
+        max-width: 1000px;
+        margin: 0 auto;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #333;
+        line-height: 1.6;
+    }
+
+    .ab-vendor-hero {
+        text-align: center;
+        padding: 60px 20px;
+        background: #fdfdfd;
+        border-bottom: 1px solid #eee;
+    }
+
+    .ab-vendor-hero h1 {
+        font-size: 36px;
+        color: #1a1a1a;
+        margin-bottom: 20px;
+    }
+
+    .ab-vendor-hero p {
+        font-size: 18px;
+        color: #666;
+        max-width: 700px;
+        margin: 0 auto 30px;
+    }
+
+    .ab-cta-button {
+        display: inline-block;
+        background: #000;
+        color: #fff;
+        padding: 15px 35px;
+        text-decoration: none;
+        border-radius: 50px;
+        font-weight: bold;
+        transition: transform 0.2s, background 0.2s;
+    }
+
+    .ab-cta-button:hover {
+        background: #333;
+        transform: translateY(-2px);
+    }
+
+    .ab-features-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 30px;
+        padding: 50px 20px;
+    }
+
+    .ab-feature-card {
+        background: #fff;
+        padding: 30px;
+        border-radius: 10px;
+        text-align: center;
+        border: 1px solid #eee;
+        transition: box-shadow 0.3s;
+    }
+
+    .ab-feature-card:hover {
+        box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+    }
+
+    .ab-icon {
+        font-size: 40px;
+        margin-bottom: 15px;
+    }
+
+    .ab-process-section {
+        background: #fafafa;
+        padding: 50px 20px;
+        border-radius: 15px;
+        text-align: center;
+    }
+
+    .ab-steps {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        margin-top: 25px;
+    }
+
+    .ab-step {
+        font-size: 17px;
+        background: #fff;
+        padding: 15px 25px;
+        border-radius: 8px;
+        width: 100%;
+        max-width: 500px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+    }
+
+    .ab-final-cta {
+        text-align: center;
+        padding: 60px 20px;
+    }
+
+    .ab-link-text {
+        color: #0056b3;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 18px;
+    }
+
+    .ab-link-text:hover {
+        text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+        .ab-vendor-hero h1 { font-size: 28px; }
+    }
+</style>
 		
 <!----------------------footer---------------------------------------------------->
 	<footer class="relative bg-gray-300 pt-10 pb-6">
@@ -103,7 +250,7 @@
 						<br/>
 						<br/>
 						<div class="text-sm text-gray-600 font-semibold py-1">
-						Copyright © AnjaniBooks 2019-2022 | All rights reserved | Distribution of the information is strictly prohibited
+						Copyright © AnjaniBooks 2019-2026 | All rights reserved | Distribution of the information is strictly prohibited
 					</div>
 				</div>
 			</div>
@@ -118,3 +265,4 @@
 </script>
 
 </html>
+
