--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="ab-vendor-hero">
         <h1>Sell Your Books on AnjaniBooks</h1>
         <p>Join India's growing community of book lovers. Whether you sell new or pre-loved books, we help you reach readers across the country.</p>
-        <a href="YOUR_GOOGLE_FORM_LINK_HERE" class="ab-cta-button">Register as a Vendor</a>
+        <a href="https://forms.gle/BAnzvP6KU3Ud2N2S9" class="ab-cta-button">Register as a Vendor</a>
     </div>
 
     <div class="ab-features-grid">
@@ -100,7 +100,7 @@
 
     <div class="ab-final-cta">
         <p>Ready to grow your book business?</p>
-        <a href="YOUR_GOOGLE_FORM_LINK_HERE" class="ab-link-text">Click here to fill the Vendor Application Form →</a>
+        <a href="https://forms.gle/BAnzvP6KU3Ud2N2S9" class="ab-link-text">Click here to fill the Vendor Application Form →</a>
     </div>
 </div>
 
@@ -265,4 +265,5 @@
 </script>
 
 </html>
+
 
